--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
     sdk: flutter
   provider: ^6.0.0
 
-  cupertino_icons: ^1.0.2
   english_words: ^4.0.0
+  path_provider: ^2.0.7
 
 dev_dependencies:
   flutter_test:
