--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^2.0.0
   provider: ^6.0.0
-
+  
   english_words: ^4.0.0
-  path_provider: ^2.0.7
 
 dev_dependencies:
   flutter_test:
