--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.learn_flutter">
    <application
-        android:label="learn_flutter"
+        android:label="2048"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
