--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: learn_flutter
-description: A new Flutter project.
+description: 以制作一个2048游戏为目标学习Flutter
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -12,9 +12,6 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: ^2.0.0
-  provider: ^6.0.0
-  
-  english_words: ^4.0.0
 
 dev_dependencies:
   flutter_test:
